CLUB-395 stats verstka 2

--- a/css/choose_css_new3.css
+++ b/css/choose_css_new3.css
@@ -2048,7 +2048,7 @@ label.file-label:active:before {
 		font-size: 10px;
 
 		border-radius: 12px;
-		outline: none;
+		/*outline: none;*/
 		padding: 7px;
 	}
 
