--- a/css/choose_css_new5.css
+++ b/css/choose_css_new5.css
@@ -2319,3 +2319,5 @@ label.file-label:active:before {
 .modal-settings.modal-faq .tab-content-wrap {
 	overflow: hidden;
 }
+
+.table-transp { background-color: rgba(0, 0, 0, 0.1) !important; }
